--- a/.github/workflows/sendChangePackageOnChange.yml
+++ b/.github/workflows/sendChangePackageOnChange.yml
@@ -31,6 +31,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Zip file
       run: | 
+        echo "Lars"
         echo ${{ steps.dir-name.outputs.dir }}
         cd ${{ vars.REPO_PATH }}
         ls
