--- a/.github/workflows/sendChangePackageOnChange.yml
+++ b/.github/workflows/sendChangePackageOnChange.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - 'laal-vm/**'
+      - 'laal-saas/**'
 jobs:
   detect-directory-changes:
     name: "Detect Directory Changes"
